Updated to CHANGEME

--- a/ConfigFiles/opt/bruincard/app.ini
+++ b/ConfigFiles/opt/bruincard/app.ini
@@ -11,7 +11,7 @@ grouper.timeout = 120
 api.url = https://grouperws.it.ucla.edu/grouper-ws/servicesRest/v4.9.0/
 ;api.wsdl = deprecated
 api.username = grouper-wsuser-bruincard
-api.password = P$2m3#aj12
+api.password = CHANGEME
 
 ; stem.path = training:bruincard ;20240806
 ; stem.path.dc = training:bruincard:etc:acl ;20240806
